fixed nav icon coloring on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -436,9 +436,9 @@ height: 70vh;
   left: 20px;
   bottom: 30px;
   width: 38px;
-  background-color: rgba(255, 68, 0, 0.331);
+  background-color: rgba(228, 63, 3, 0.581);
   border-radius: 50%;
-  border: 1px solid orangered;
+  border: 1px solid rgba(156, 42, 0, 0.977);
 }
 
 #return-icon:hover {
@@ -957,9 +957,6 @@ height: 70vh;
   }
 
   #return-icon-nav {
-    /* position: fixed;
-    left: 30px;
-    bottom: 30px; */
     width: 38px;
     background-color: rgba(228, 63, 3, 0.581);
     border-radius: 50%;
